# VitalBite

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile.ai  Dockerfile.web  Next.md  README.md  chat_manager.py  cli_chat.py  db.py  docker-compose.yml  get_last_msg.py  langgraph.json  langgraph_server.py  models.py  plan.md  pyproject.toml  test_bind_tools.py  test_content.py  test_db_setup.py  test_parse.py  test_runnable.py  test_tool_invoke.py  test_tool_schema.py  test_tool_schema_2.py  test_tool_schema_3.py  timeline.md  walkthrough.md  web_server.py
backend/: Dockerfile.ai  Dockerfile.web  chat_manager.py  db.py  langgraph_server.py  models.py  pyproject.toml  verify_setup.py  web_server.py
backend/langgraph_app/: config.py
backend/langgraph_app/agents/: __init__.py
backend/langgraph_app/agents/chitchat/: agent.py
backend/langgraph_app/agents/food_recognition/: __init__.py  agent.py  predictor.py  schemas.py
backend/langgraph_app/agents/food_recommendation/: __init__.py  agent.py
backend/langgraph_app/agents/goalplanning/: agent.py
backend/langgraph_app/orchestrator/: graph.py  state.py
backend/langgraph_app/orchestrator/nodes/: __init__.py  router.py
backend/langgraph_app/orchestrator/nodes/guardrails/: config.py  nodes.py  responses.py
backend/langgraph_app/tools/map/: google_maps.py  ip_location.py
backend/langgraph_app/tools/vision/: single_image.py  spatial.py
backend/langgraph_app/utils/: __init__.py  llm_callback.py  llm_factory.py  semaphores.py  utils.py
backend/scripts/: build_vector_store.py  cleanup_test_data.py  inspect_faiss_index.py  inspect_xlsx_keys.py
backend/tests/: load_test_ws.py  run_test.py  test_map_tools.py
backend/tests/router_intent/: success_cases_per_llm.md
backend/tests/router_intent_v1/legacy/: check_test_cases.py
data/: wabi_chat.db
dev_doc/: level _1.md  messages_structure.md  next_step_3_5.md
dev_doc/legacy/: FNDDS_GUIDE.md  INTENT_GUIDE.md  README_v1.md  level _1.md  next_step_3_5.md
dev_doc/weekly_report/: weekly_report_2_28.md
doc/: 2026-03-28-performance-audit-report.md  2026-03-30-comprehensive-technical-report.md  DB_GUIDE.md  NEXT.md  finetuning_report.md
docker/: Dockerfile.ai  Dockerfile.web
eval/: README.md  evaluation_report.md  run_eval.py  train_model.py
eval/food_recognition/: analyze.py  run_eval.py  summarize_results.py  train_model.py
eval/intent/: README.md  eval_reasoning.py  (+11 more)
frontend/: app.js  styles.css
langgraph_app/: config.py  models_config.json
scripts/: build_vector_store.py  migrate_images.py  smoke_image_refs.py  smoke_markdown_it.js
static/: app.js  index.html  styles.css
tests/: load_test_ws.py  load_test_ws_temp.py  test_agent.py  test_phase1.py  test_phase2.py
(+217 files in other folders)
